# bp-ann

./: CMakeLists.txt  LICENSE  main.cpp
layers/: FullyConnectedLayer.cpp  FullyConnectedLayer.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  MappingInputLayer.cpp  MappingInputLayer.h  OutputLayer.cpp  OutputLayer.h
train/: SimpleTrainer.cpp  SimpleTrainer.h
utils/: MathUtils.cpp  MathUtils.h
